Projetos/ACBrLib/Demos/Java/NFe/Imports/ACBrLibNFeMT/src/com/acbr/nfe/ACBrNFe.java

package com.acbr.nfe;

import com.acbr.ACBrLibBase;
import com.acbr.ACBrSessao;
import com.sun.jna.Library;
import com.sun.jna.Native;
import com.sun.jna.Platform;
import com.sun.jna.Pointer;
import com.sun.jna.ptr.IntByReference;
import com.sun.jna.ptr.PointerByReference;

import java.io.File;
import java.nio.ByteBuffer;
import java.nio.file.Paths;
import java.text.DateFormat;
import java.text.SimpleDateFormat;
import java.util.Date;

public final class ACBrNFe extends ACBrLibBase {

    private interface ACBrNFeLib extends Library {
    
        static String JNA_LIBRARY_NAME = LibraryLoader.getLibraryName();
        public final static ACBrNFeLib INSTANCE = LibraryLoader.getInstance();

        class LibraryLoader {
      
            private static String library = "";
            private static ACBrNFeLib instance = null;

            private static String getLibraryName() {
                if ( library.isEmpty() ) {
                    if(Platform.isWindows()){
                        library = Platform.is64Bit() ? "ACBrNFe64" : "ACBrNFe32";                        
                    }else{
                        library = Platform.is64Bit() ? "acbrnfe64" : "acbrnfe32";
                    }
                  }
                return library;
                
            }

            public static ACBrNFeLib getInstance() {
                if ( instance == null ) {
                    instance = ( ACBrNFeLib ) Native.synchronizedLibrary(
                ( Library ) Native.load( JNA_LIBRARY_NAME, ACBrNFeLib.class ) );
                }
                return instance;
            }
    }
        
    int NFE_Inicializar( PointerByReference libHandler, String eArqConfig, String eChaveCrypt );

    int NFE_Finalizar(Pointer libHandler);

    int NFE_Nome( Pointer libHandler, ByteBuffer buffer, IntByReference bufferSize );

    int NFE_Versao( Pointer libHandler, ByteBuffer buffer, IntByReference bufferSize );

    int NFE_UltimoRetorno( Pointer libHandler, ByteBuffer buffer, IntByReference bufferSize );

    int NFE_ConfigImportar(Pointer libHandler, String eArqConfig);
        
    int NFE_ConfigExportar(Pointer libHandler, ByteBuffer buffer, IntByReference bufferSize);
    
    int NFE_ConfigLer( Pointer libHandler, String eArqConfig );

    int NFE_ConfigGravar( Pointer libHandler, String eArqConfig );

    int NFE_ConfigLerValor( Pointer libHandler, String eSessao, String eChave, ByteBuffer buffer, IntByReference bufferSize );

    int NFE_ConfigGravarValor( Pointer libHandler, String eSessao, String eChave, String valor );

    int NFE_CarregarXML( Pointer libHandler, String eArquivoOuXML );

    int NFE_CarregarINI( Pointer libHandler, String eArquivoOuINI );
    
    int NFE_ObterXml( Pointer libHandler, Integer AIndex, ByteBuffer buffer, IntByReference bufferSize );
    
    int NFE_GravarXml( Pointer libHandler, Integer AIndex, String eNomeArquivo, String ePathArquivo );
    
    int NFE_ObterIni( Pointer libHandler, Integer AIndex, ByteBuffer buffer, IntByReference bufferSize );
    
    int NFE_GravarIni( Pointer libHandler, Integer AIndex, String eNomeArquivo, String ePathArquivo );

    int NFE_LimparLista(Pointer libHandler);

    int NFE_CarregarEventoXML( Pointer libHandler, String eArquivoOuXml );

    int NFE_CarregarEventoINI( Pointer libHandler, String eArquivoOuIni );

    int NFE_LimparListaEventos(Pointer libHandler);

    int NFE_Assinar(Pointer libHandler);

    int NFE_Validar(Pointer libHandler);
    
    int NFE_SalvarPDF(Pointer libHandler, ByteBuffer buffer, IntByReference bufferSize);

    int NFE_ValidarRegrasdeNegocios( Pointer libHandler, ByteBuffer buffer, IntByReference bufferSize );

    int NFE_VerificarAssinatura( Pointer libHandler, ByteBuffer buffer, IntByReference bufferSize );
    
    int NFE_GerarChave(Pointer libHandler, int ACodigoUF, int ACodigoNumerico, int AModelo, int ASerie, int ANumero,
                int ATpEmi, String AEmissao, String CPFCNPJ, ByteBuffer buffer, IntByReference bufferSize);
    
    int NFE_ObterCertificados( Pointer libHandler, ByteBuffer buffer, IntByReference bufferSize );
    
    int NFE_GetPath( Pointer libHandler, int tipo, ByteBuffer buffer, IntByReference bufferSize );
    
    int NFE_GetPathEvento( Pointer libHandler, String aCodEvento, ByteBuffer buffer, IntByReference bufferSize );

    int NFE_StatusServico( Pointer libHandler, ByteBuffer buffer, IntByReference bufferSize );

    int NFE_Consultar( Pointer libHandler, String eChaveOuNFe, boolean AExtrairEventos, ByteBuffer buffer, IntByReference bufferSize );

    int NFE_Inutilizar( Pointer libHandler, String ACNPJ, String AJustificativa, int Ano, int Modelo, int Serie,
                        int NumeroInicial, int NumeroFinal, ByteBuffer buffer, IntByReference bufferSize );

    int NFE_Enviar( Pointer libHandler, int ALote, boolean Imprimir, boolean sincrono, boolean zipado, ByteBuffer buffer, IntByReference bufferSize );

    int NFE_ConsultarRecibo( Pointer libHandler, String aRecibo, ByteBuffer buffer, IntByReference bufferSize );
    
    int NFE_ConsultaCadastro( Pointer libHandler, String cUF, String nDocumento, Boolean nIE, ByteBuffer buffer, IntByReference bufferSize );

    int NFE_Cancelar( Pointer libHandler, String eChave, String eJustificativa, String eCNPJ, int ALote,
                      ByteBuffer buffer, IntByReference bufferSize );

    int NFE_EnviarEvento( Pointer libHandler, int idLote, ByteBuffer buffer, IntByReference bufferSize );

    int NFE_DistribuicaoDFePorUltNSU( Pointer libHandler, int AcUFAutor, String eCNPJCPF, String eultNsu, ByteBuffer buffer,
                                      IntByReference bufferSize );

    int NFE_DistribuicaoDFePorNSU( Pointer libHandler, int AcUFAutor, String eCNPJCPF, String eNSU,
                                   ByteBuffer buffer, IntByReference bufferSize );

    int NFE_DistribuicaoDFePorChave( Pointer libHandler, int AcUFAutor, String eCNPJCPF, String echNFe,
                                     ByteBuffer buffer, IntByReference bufferSize );

    int NFE_EnviarEmail( Pointer libHandler, String ePara, String eChaveNFe, boolean AEnviaPDF, String eAssunto,
                         String eCC, String eAnexos, String eMensagem );

    int NFE_EnviarEmailEvento( Pointer libHandler, String ePara, String eChaveEvento, String eChaveNFe,
                               boolean AEnviaPDF, String eAssunto, String eCC, String eAnexos, String eMensagem );

    int NFE_Imprimir( Pointer libHandler, String cImpressora, int nNumCopias, String cProtocolo,
                      String bMostrarPreview, String cMarcaDagua, String bViaConsumidor, String bSimplificado );

    int NFE_ImprimirPDF(Pointer libHandler);

    int NFE_ImprimirEvento( Pointer libHandler, String eArquivoXmlNFe, String eArquivoXmlEvento );

    int NFE_ImprimirEventoPDF( Pointer libHandler, String eArquivoXmlNFe, String eArquivoXmlEvento );

    int NFE_ImprimirInutilizacao( Pointer libHandler, String eArquivoXml );

    int NFE_ImprimirInutilizacaoPDF( Pointer libHandler, String eArquivoXml );

  }
    
  public ACBrNFe() throws Exception {
    File iniFile = Paths.get( System.getProperty( "user.dir" ), "ACBrLib.ini" ).toFile();
    if ( !iniFile.exists() ) {
      iniFile.createNewFile();
    }

    PointerByReference handle = new PointerByReference();
    int ret = ACBrNFeLib.INSTANCE.NFE_Inicializar( handle,toUTF8( iniFile.getAbsolutePath() ), toUTF8( "" ) );
    checkResult( ret );
    setHandle(handle.getValue());
  }

  public ACBrNFe( String eArqConfig, String eChaveCrypt ) throws Exception {
    PointerByReference handle = new PointerByReference();
    int ret = ACBrNFeLib.INSTANCE.NFE_Inicializar( handle,toUTF8( eArqConfig ), toUTF8( eChaveCrypt ) );
    checkResult( ret );
    setHandle(handle.getValue());
  }

  @Override
  protected void dispose() throws Exception {
    int ret = ACBrNFeLib.INSTANCE.NFE_Finalizar(getHandle());
    checkResult( ret );
  }

  public String nome() throws Exception {
    ByteBuffer buffer = ByteBuffer.allocate( STR_BUFFER_LEN );
    IntByReference bufferLen = new IntByReference( STR_BUFFER_LEN );

    int ret = ACBrNFeLib.INSTANCE.NFE_Nome( getHandle(), buffer, bufferLen );
    checkResult( ret );

    return fromUTF8( buffer, bufferLen.getValue() );
  }

  public String versao() throws Exception {
    ByteBuffer buffer = ByteBuffer.allocate( STR_BUFFER_LEN );
    IntByReference bufferLen = new IntByReference( STR_BUFFER_LEN );

    int ret = ACBrNFeLib.INSTANCE.NFE_Versao( getHandle(), buffer, bufferLen );
    checkResult( ret );

    return fromUTF8( buffer, bufferLen.getValue() );
  }

  public void configLer() throws Exception {
    configLer( "" );
  }

  public void configLer( String eArqConfig ) throws Exception {
    int ret = ACBrNFeLib.INSTANCE.NFE_ConfigLer( getHandle(), toUTF8( eArqConfig ) );
    checkResult( ret );
  }

  public void configGravar() throws Exception {
    configGravar( "" );
  }

  public void configGravar( String eArqConfig ) throws Exception {
    int ret = ACBrNFeLib.INSTANCE.NFE_ConfigGravar( getHandle(), toUTF8( eArqConfig ) );
    checkResult( ret );
  }

    @Override
  public String configLerValor( ACBrSessao eSessao, String eChave ) throws Exception {
    ByteBuffer buffer = ByteBuffer.allocate( STR_BUFFER_LEN );
    IntByReference bufferLen = new IntByReference( STR_BUFFER_LEN );

    int ret = ACBrNFeLib.INSTANCE.NFE_ConfigLerValor( getHandle(), toUTF8( eSessao.name() ), toUTF8( eChave ), buffer, bufferLen );
    checkResult( ret );

    return processResult( buffer, bufferLen );
  }

    @Override
  public void configGravarValor( ACBrSessao eSessao, String eChave, Object value ) throws Exception {
    int ret = ACBrNFeLib.INSTANCE.NFE_ConfigGravarValor(getHandle(), toUTF8(eSessao.name()), toUTF8(eChave), toUTF8(value.toString()) );
    checkResult( ret );
  }

  public void carregarXml( String eArquivoOuXML ) throws Exception {
    int ret = ACBrNFeLib.INSTANCE.NFE_CarregarXML(getHandle(),  toUTF8( eArquivoOuXML ) );
    checkResult( ret );
  }

  public String obterXml( int AIndex ) throws Exception {
    ByteBuffer buffer = ByteBuffer.allocate( STR_BUFFER_LEN );
    IntByReference bufferLen = new IntByReference( STR_BUFFER_LEN );
    int ret = ACBrNFeLib.INSTANCE.NFE_ObterXml(getHandle(), AIndex, buffer, bufferLen );
    checkResult( ret );
      
    return processResult( buffer, bufferLen );
  }
  
  public void gravarXml ( int AIndex ) throws Exception {
    gravarXml(AIndex, "", "");
  }
  
  public void gravarXml ( int AIndex, String eNomeArquivo ) throws Exception {
    gravarXml(AIndex, eNomeArquivo, "");
  }
  
  public void gravarXml ( int AIndex, String eNomeArquivo, String ePathArquivo ) throws Exception {
    int ret = ACBrNFeLib.INSTANCE.NFE_GravarXml( getHandle(), AIndex, toUTF8( eNomeArquivo ), toUTF8( ePathArquivo ) );
    checkResult( ret );
  }
  
  public String obterIni( int AIndex ) throws Exception {
    ByteBuffer buffer = ByteBuffer.allocate( STR_BUFFER_LEN );
    IntByReference bufferLen = new IntByReference( STR_BUFFER_LEN );
    int ret = ACBrNFeLib.INSTANCE.NFE_ObterIni(getHandle(), AIndex, buffer, bufferLen );
    checkResult( ret );
      
    return processResult( buffer, bufferLen );
  }
  
  public void gravarIni ( int AIndex ) throws Exception {
    gravarIni(AIndex, "", "");
  }
  
  public void gravarIni ( int AIndex, String eNomeArquivo ) throws Exception {
    gravarIni(AIndex, eNomeArquivo, "");
  }
